// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpotlightBannerMain renders correctly 1`] = `
<div
  className="spotlight-banner__main"
/>
`;

exports[`SpotlightBannerMain renders with children correctly 1`] = `
<div
  className="spotlight-banner__main"
>
  <div>
    My Child
  </div>
</div>
`;
